# chemistryinductivebias

./: .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
chemistryinductivebias/: __init__.py
chemistryinductivebias/src/: proton_transfer.py  utils.py
docs/: requirements.txt
docs/source/: changelog.md  conf.py  getting-started.md  index.md  index.rst
docs/source/api/: chemistryinductivebias.paths.rst  chemistryinductivebias.rst  chemistryinductivebias.src.proton_transfer.rst  chemistryinductivebias.src.rst  chemistryinductivebias.src.utils.rst  modules.rst
docs/source/guide/: components.md  hard-parts.md  modules.md  overview.md  proton-transfer.md  workflow.md
docs/source/guide/deprecated/: layers.md  parameters.md  v1-v2.md
