[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
  {name = "Peter G. Chang", email = "peter0414@gmail.com"}
]
dependencies = [
  "pymatgen",
  "rdkit",
  "wandb"
]
description = "Chemistry Reaction Prediction using Textbook Inductive Bias"
dynamic = ["version"]
name = "chemistryinductivebias"
requires-python = ">=3.12.0"

[project.optional-dependencies]
dev = [
  "ipykernel",
  "pylint",
  "pre-commit",
  "pytest",
  "refurb",
  "ruff",
  "sphinx"
]

[project.urls]
issues = "https://github.com/petergchang/chemistryinductivebias/issues"
repository = "https://github.com/petergchang/chemistryinductivebias"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "missing-docstring",
  "too-many-arguments",
  "too-many-lines",
  "too-many-locals",
  "too-many-positional-arguments"
]

[tool.setuptools_scm]
version_file = "version.py"
