[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
  {name = "Peter G. Chang", email = "peter0414@gmail.com"}
]
dependencies = [
  "pymatgen",
  "rdkit",
  "wandb"
]
description = "Chemistry Reaction Prediction using Textbook Inductive Bias"
dynamic = ["version"]
name = "chemistryinductivebias"
requires-python = ">=3.12.0"

[project.optional-dependencies]
dev = [
  "furo",
  "ipykernel",
  "myst-parser",
  "pre-commit",
  "pytest",
  "refurb",
  "ruff",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints"
]

[project.urls]
issues = "https://github.com/petergchang/chemistryinductivebias/issues"
repository = "https://github.com/petergchang/chemistryinductivebias"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools_scm]
version_file = "version.py"
